--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,10 @@
 # Site
-repository: Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
+repository:  TarunSSarode/testing
+# Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
 # Personal info
-#name: taun
+name: taun
 title: Your job title
 email: Your email (optional)
 phone: Your phone number (optional)
@@ -56,7 +57,7 @@ footer_show_references: true
 
 # Build settings
 # theme: modern-resume-theme (Use this is you are hosting your resume yourself)
-# remote_theme: sproogen/modern-resume-theme (Use this if you are hosting your resume on GitHub)
+ remote_theme: minima (Use this if you are hosting your resume on GitHub)
 
 sass:
   sass_dir: _sass
