--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ footer_show_references: true
 
 # Build settings
 # theme: modern-resume-theme (Use this is you are hosting your resume yourself)
- remote_theme: minima (Use this if you are hosting your resume on GitHub)
+ remote_theme: chirpy (Use this if you are hosting your resume on GitHub)
 
 sass:
   sass_dir: _sass
