--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ about_content: | # this will include new lines to allow paragraphs
     - Links
     - Images
 
-# Projects Section
+Projects Section
 projects_title: Awards #(Use this to override about projects section title)
 
 # Experience Section
@@ -57,7 +57,7 @@ footer_show_references: true
 
 # Build settings
 # theme: modern-resume-theme (Use this is you are hosting your resume yourself)
- remote_theme: chirpy (Use this if you are hosting your resume on GitHub)
+# remote_theme:  sproogen/modern-resume-theme (Use this if you are hosting your resume on GitHub)
 
 sass:
   sass_dir: _sass
