--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,8 @@ about_content: | # this will include new lines to allow paragraphs
     - Links
     - Images
 
-Projects Section
-projects_title: Awards #(Use this to override about projects section title)
+# Projects Section
+# projects_title: Awards #(Use this to override about projects section title)
 
 # Experience Section
 # experience_title: Experience #(Use this to override about experience section title)
