--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,9 @@ about_content: | # this will include new lines to allow paragraphs
 # Education Section
 # education_title: Education #(Use this to override about education section title)
 
+# Awards Section
+# awards_title: awards #(Use this to override about education section title)
+
 # More Section
 # more_title: A Little More About Me #(Use this to override about more section title)
 more_content: | # this will include new lines to allow paragraphs
