--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,6 @@ about_content: | # this will include new lines to allow paragraphs
     - Links
     - Images
 
-# Projects Section
-# projects_title: Awards #(Use this to override about projects section title)
 
 # Experience Section
 # experience_title: Experience #(Use this to override about experience section title)
@@ -46,7 +44,7 @@ about_content: | # this will include new lines to allow paragraphs
 # education_title: Education #(Use this to override about education section title)
 
 # Awards Section
-# awards_title: awards #(Use this to override about education section title)
+# awards_title: Awards #(Use this to override about education section title)
 
 # More Section
 # more_title: A Little More About Me #(Use this to override about more section title)
