--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,7 +1,7 @@
 # Education Template
 - layout: left
   name: Institution name
-  dates: Date Range (eg. 2016 - 2019)
+  dates: Date Range (eg.- 2019)
   qualification: Qualifications (eg. BA Performing Arts)
   quote: >
     Short institution or course description (optional)
