--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ linkedin_username: www.linkedin.com/in/tarun-s-sarode
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
+# about_profile_image: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
 about_content: | # this will include new lines to allow paragraphs
 #  Write an awesome description about yourself here, this supports markdown, so you can add links and highlight things <mark>like this</mark>.
    A Data Analyst 
