--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: Tarun-S-Sarode/testing
+repository:  Tarun-S-Sarode/testing
 # Git repository where your resume will be hosted, only required if you are hosting on GitHub (eg. sproogen/modern-resume-theme)
 # favicon: Directory of your favicon (eg. images/favicon.ico)(optional)
 
@@ -7,9 +7,10 @@ repository: Tarun-S-Sarode/testing
 name: Tarun.S.Sarode
 title: Data Analyst
 email: tarun.sarode@outlook.com
-# phone: Your phone number (optional)
-# cv   : "resume.pdf"
-# website: Your website (eg. https://google.com)(optional)
+phone: Your phone number (optional)
+cv   : "resume.pdf"
+website: Your website (eg. https://google.com)(optional)
+
 
 # Social links
 #twitter_username: jekyllrb
@@ -18,50 +19,37 @@ github_username:  Tarun-S-Sarode
 #facebook_username: jekyll
 #flickr_username: jekyll
 #instagram_username: jekyll
-linkedin_username: www.linkedin.com/in/tarun-s-sarode
+#linkedin_username: jekyll
 #xing_username: jekyll
 #pinterest_username: jekyll
 #youtube_username: jekyll
 #googleplus_username: +jekyll
-
 # About Section
 # about_title: About Me (Use this to override about section title)
-# about_profile_image: https://cdn.jsdelivr.net/gh/cotes2020/chirpy-images/commons/avatar.jpg
+about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-#  Write an awesome description about yourself here, this supports markdown, so you can add links and highlight things <mark>like this</mark>.
-   A Data Analyst 
-
-#  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
-#    - [My Awesome Resume](https://moya10.github.io/awesome-cv/resume.pdf)
-#    - Tables
-#    - Links
-#    - Images
+  Write an awesome description about yourself here, this supports markdown, so you can add links and highlight things <mark>like this</mark>.
+  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
+    - [My Awesome Resume](https://moya10.github.io/awesome-cv/resume.pdf)
+    - Tables
+    - Links
+    - Images
+    
+# Experience Section
+# experience_title: Experience #(Use this to override about experience section title)
 
 # Education Section
 # education_title: Education #(Use this to override about education section title)
 
-# Experience Section
-# experience_title: Experience #(Use this to override about experience section title)
-
-# Certification Section
-# certification_title: Certification 
-
-# Projects Section
-# projects_title: Projects 
-
-# Volunteering Section
-# awards_title: Awards 
-
-# Reach Me
-# reach-me_title: Reach Me 
+# Awards Section
+# awards_title: Awards #(Use this to override about education section title)
 
 # More Section
 # more_title: A Little More About Me #(Use this to override about more section title)
 more_content: | # this will include new lines to allow paragraphs
   This is where you can write a little more about yourself. You could title this section **Interests** and include some of your other interests.
-
   Or you could title it **Skills** and write a bit more about things that make you more desirable, like *leadership* or *teamwork*
-
+  
 # Footer
 footer_show_references: true
 
@@ -72,10 +60,10 @@ footer_show_references: true
 sass:
   sass_dir: _sass
   style: compressed
-
+  
 plugins:
  - jekyll-seo-tag
-
+ 
 exclude : [
   "makefile",
   "Gemfile",
