--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ about_content: | # this will include new lines to allow paragraphs
     - Tables
     - Links
     - Images
-    - Images ![alt text](/images/logo.png "Trees")
+    - Images ![logo.png](/images/logo.png "Trees")
     
 # Education Section
 # education_title: Education #(Use this to override about education section title)
