--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ about_content: | # this will include new lines to allow paragraphs
     - Tables
     - Links
     - Images
-    - ![ ](/images/IMG_0072.jpg)
+    - ![alt text](/images/IMG_0072.jpg "brother")
     
 # Education Section
 # education_title: Education #(Use this to override about education section title)
