--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,7 @@
 # Experience template
 - layout: left
   company: Company name
+  thumbnail-img: /images/IMG_0072.jpg ###################################################################################
   link: Link to company (optional)
   job_title: Job title
   dates: Date Range (eg. November 2016 - present)
