--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,6 +2,7 @@
 - layout: left
   company: Company name
   link: Link to company (optional)
+  thumbnail-img: /assets/img/thumb.png
   job_title: Job title
   dates: Date Range (eg. November 2016 - present)
   quote: >
@@ -12,6 +13,7 @@
 - layout: right
   company: Company 1
   link: https://google.com
+  thumbnail-img: /assets/img/thumb.png
   job_title: Job title 1
   dates: November 2016 - present
   quote: >
