--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ github_username:  Tarun-S-Sarode
 #flickr_username: jekyll
 #instagram_username: jekyll
 linkedin_username: jekyll
+email: tarun.sarode@outlook.com
 #xing_username: jekyll
 #pinterest_username: jekyll
 #youtube_username: jekyll
