--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,6 +1,6 @@
 # Experience template
 - layout: left
-  company: Company name
+  company: [Company name](https://moya10.github.io/awesome-cv/resume.pdf) 
   link: Link to company (optional)
   thumbnail-img: /assets/img/thumb.png
   job_title: Job title
