--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -1,8 +1,8 @@
 # Experience template
 - layout: left
-  company: [Company name](https://moya10.github.io/awesome-cv/resume.pdf) 
+  company: Company name 
   link: Link to company (optional)
-  thumbnail-img: /assets/img/thumb.png
+  img: /assets/img/thumb.png
   job_title: Job title
   dates: Date Range (eg. November 2016 - present)
   quote: >
