--- a/_config.yml
+++ b/_config.yml
@@ -14,12 +14,12 @@ email: tarun.sarode@outlook.com
 
 # Social links
 #twitter_username: jekyllrb
-github_username:  Tarun-S-Sarode
+#github_username:  Tarun-S-Sarode
 #dribbble_username: jekyll
 #facebook_username: jekyll
 #flickr_username: jekyll
 #instagram_username: jekyll
-linkedin_username: jekyll
+linkedin_username: tarun-s-sarode
 # email: tarun.sarode@outlook.com 3########################################3
 #xing_username: jekyll
 #pinterest_username: jekyll
@@ -28,15 +28,16 @@ linkedin_username: jekyll
 
 # About Section
 # about_title: About Me (Use this to override about section title)
-about_profile_image: images/profile.jpg
+about_profile_image: images/IMG-20200109-WA0003 - 1-53e42072-a2cd-11eb-9940-c27ccc2331ef-98031ad8-a2cd-11eb-9940-c27ccc2331ef.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Write an awesome description about yourself here, this supports markdown, so you can add links and highlight things <mark>like this</mark>.
-  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
-    - [My Awesome Resume](https://moya10.github.io/awesome-cv/resume.pdf)
-    - Tables
-    - Links
-    - Images
-    - ![brother](/images/IMG_0072.jpg "brother") ####################################################3
+ Hi, 
+#  Write an awesome description about yourself here, this supports markdown, so you can add links and highlight things <mark>like this</mark>.
+#  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
+#    - [My Awesome Resume](https://moya10.github.io/awesome-cv/resume.pdf)
+#    - Tables
+#    - Links
+#    - Images
+#    - ![brother](/images/IMG_0072.jpg "brother") ####################################################3
     
 # Education Section
 # education_title: Education #(Use this to override about education section title)
@@ -64,7 +65,7 @@ footer_show_references: true
 
 # Build settings
 # theme: modern-resume-theme (Use this is you are hosting your resume yourself)
-remote_theme:  sproogen/modern-resume-theme (Use this if you are hosting your resume on GitHub)
+# remote_theme:  sproogen/modern-resume-theme (Use this if you are hosting your resume on GitHub)
 
 sass:
   sass_dir: _sass
