--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,9 +1,9 @@
 # Education Template
 - layout: left
-  name: Institution name
-  dates: Date Range (eg.- 2019)
-  qualification: Qualifications (eg. BA Performing Arts)
-  quote: >
-    Short institution or course description (optional)
+  name: RMIT
+  dates: Date Range (eg. 2018 - 2019)
+  qualification: Masters of Data Analytics
+  # quote: >
+  #  Short institution or course description (optional)
   description: | # this will include new lines to allow paragraphs
     Description of qualification
