--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ linkedin_username: tarun-s-sarode
 about_profile_image: images/IMG-20200109-WA0003 - 1-53e42072-a2cd-11eb-9940-c27ccc2331ef-98031ad8-a2cd-11eb-9940-c27ccc2331ef.jpg
 about_content: | # this will include new lines to allow paragraphs
     Hi, 
-     - ![brother](/testing/images/IMG_0072.jpg "brother") ####################################################3
+      ![brother](/testing/images/IMG_0072.jpg "brother") ####################################################3
 #  Write an awesome description about yourself here, this supports markdown, so you can add links and highlight things <mark>like this</mark>.
 #  You can even add paragraphs by using empty lines like this and add anything else markdown supports such as
 #    - [My Awesome Resume](https://moya10.github.io/awesome-cv/resume.pdf)
