--- a/_data/education.yml
+++ b/_data/education.yml
@@ -2,7 +2,8 @@
 - layout: left
   name: RMIT
   dates: Date Range (eg. 2018 - 2019)
-  qualification: Masters [Masters of Data Analytics](https://moya10.github.io/awesome-cv/resume.pdf)
+  qualification: Masters of Data Analytics
+  link: lkjlfsovmoiboiio
   # quote: >
   #  Short institution or course description (optional)
   description: | # this will include new lines to allow paragraphs
