--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -2,7 +2,7 @@
 - layout: left
   company: Company name 
   link: Link to company (optional)
-  img: /assets/img/thumb.png
+  image: /assets/img/thumb.png
   job_title: Job title
   dates: Date Range (eg. November 2016 - present)
   quote: >
