--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -9,11 +9,11 @@
    Cogstate is a cognitive science company which provides computerized cognitive tests for clinical trials, academic research, healthcare and brain injury applications in Australia and Internationally.
   description: | # this will include new lines to allow paragraphs
    Responsibilities
-   • Collected, researched and assist the company in analyzing the difference between the different types of physiological tests.
-   • Used R to performed calculations and used statistical analysis to analyze the data set.
-   • Prepared detailed visualizations to clearly understand the longitudinal trajectory.
-   • The final analysis supported and contributed to the company to make an informed decision on the different tests to be conducted.
-   • Developed extensive statical research working skills adhering to Data privacy rules.
+   - Collected, researched and assist the company in analyzing the difference between the different types of physiological tests.
+   - Used R to performed calculations and used statistical analysis to analyze the data set.
+   - Prepared detailed visualizations to clearly understand the longitudinal trajectory.
+   - The final analysis supported and contributed to the company to make an informed decision on the different tests to be conducted.
+   - Developed extensive statical research working skills adhering to Data privacy rules.
 
 
 
