--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -6,9 +6,7 @@
  # quote: >
  #   Short overview of the project (optional)
   description: | # this will include new lines to allow paragraphs
-   - This Machine Learning project focuses on predicting the crdibility of the customers or subjects for
-   loan repayment by analysing different factors which determine the decission on wether to approve or reject the customer request.
-   
+   - This Machine learning project focuses on predicting the credibility of the customers or subjects for loanrepaymentby analysing differentfactorswhich determine the decission on whether to approve or reject the customer request.
    - The modelling is performed using techniques which as:
        - Encoding 
        - Feature Selection and Ranking 
@@ -24,9 +22,10 @@
  # quote: >
  #   Short overview of the project (optional)
   description: | # this will include new lines to allow paragraphs
-   - This project is an exploratory analysis of 1. Chemical Components in Marijuana. 
-                                                2. Socio Economic Variables.
-                                                3. Fake and Genuine Bank Notes.
+   - This project is an exploratory analysis of
+        1. Chemical Components in Marijuana. 
+        2. Socio Economic Variables.
+        3. Fake and Genuine Bank Notes.
    - The analysis gives insight into the relation between the variables of the data sets by using multivariate techniques as Principal Component, Factor Analysis and Discriminant Analysis.
    - The analysis was carried out using SAS
 
@@ -37,6 +36,20 @@
  # quote: >
  #   Short overview of the project (optional)
   description: | # this will include new lines to allow paragraphs
-   - 
+   - Predicted the Bitcoin Prices for the future 10 days of the Time series data.
+   - Applied Time Series Analysis techniques like ARIMA, SARIMA, GARCH and Residual Analysis to obtain MASE Table for accuracy.
+   - Used R to acurately forecast the future values along with plot.
+   
+   
+- layout: left 
+  name: Forecasting Bitcoin Prices
+  link: View Project
+ # github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
+ # quote: >
+ #   Short overview of the project (optional)
+  description: | # this will include new lines to allow paragraphs
+   - Predicted the Bitcoin Prices for the future 10 days of the Time series data.
+   - Applied Time Series Analysis techniques like ARIMA, SARIMA, GARCH and Residual Analysis to obtain MASE Table for accuracy.
+   - Used R to acurately forecast the future values along with plot.
    
    
