--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -1,6 +1,7 @@
 # Project template
 - layout: left
   name: Loan Crediability Prediction System
+  job_title: Machine Learning.
   link: View Project
  # github: Github page for project (eg. sproogen/modern-resume-theme)(optional)
  # quote: >
