--- a/_data/experience.yml
+++ b/_data/experience.yml
@@ -3,7 +3,7 @@
   company:  Research Data Analyst
   # image: /assets/img/thumb.png # is not working should check how to add company icon
   job_title: Cogstate
-  dates: July 2019 - November 2019
+  dates: July  - November 2019
   link: Link to company (optional)
   quote: >
    Cogstate is a cognitive science company which provides computerized cognitive tests for clinical trials, academic research, healthcare and brain injury applications in Australia and Internationally.
